--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Test git vscode</h1>
+    <h1>Test git console</h1>
     <br />
     <p>
       Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, fuga
