git-console-fix1

--- a/index.html
+++ b/index.html
@@ -15,12 +15,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Test git console</h1>
+    <h1>Test git console fix</h1>
     <br />
-    <p>
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Recusandae, fuga
-      dolor. Quaerat impedit a voluptatum vitae architecto officiis, optio ipsa
-      voluptates esse officia cum saepe.
-    </p>
+    <p>Lorem ipsum dolor, sit amet</p>
   </body>
 </html>
